--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "babel-loader": "^8.0.0",
         "chai": "^4.2.0",
         "chai-immutable": "^2.1.0",
+        "css-loader": "^3.6.0",
         "eslint": "^7.4.0",
         "eslint-config-airbnb": "^18.2.0",
         "eslint-config-prettier": "^6.11.0",
